<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now_playing"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructure.MusicLibraryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_NavBar"
        android:orientation="horizontal"
        style="@style/navBar">

        <ImageView
            android:id="@+id/nowPlaying_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/nowplaying_inactive"
            style="@style/navBarItem"/>

        <ImageView
            android:id="@+id/songs_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/playlist_inactive"
            style="@style/navBarItem"/>

        <ImageView
            android:id="@+id/album_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/music_library"
            style="@style/navBarItem"/>

        <ImageView
            android:id="@+id/artist_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/artist_inactive"
            style="@style/navBarItem"/>

        <ImageView
            android:id="@+id/lyrics_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/lyrics_inactive"
            style="@style/navBarItem"/>

        <ImageView
            android:id="@+id/genre_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/equalizer_inactive"
            style="@style/navBarItem"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/explanation_textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genreFilter"
            style="@style/filters"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artistFilter"
            style="@style/filters"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albumFilter"
            style="@style/filters"/>
    </LinearLayout>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_horizontalDivider"
        android:background="@color/colorNavBar"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/explanation_textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song1"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song2"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song3"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song4"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song5"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song6"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song7"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song8"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song9"
                    style="@style/songTitle"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/nowplaying_inactive"
                    style="@style/musicLibraryButtons"/>

                <ImageView
                    android:layout_width="@dimen/width_MusicLibraryButtons"
                    android:layout_height="@dimen/height_MusicLibraryButtons"
                    android:src="@drawable/playlist_inactive"
                    style="@style/musicLibraryButtons"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/musicLibraryActivity_TextView"
                style="@style/explanation_textView"/>

        </LinearLayout>

    </ScrollView>




</LinearLayout>
